API for getting vendor products
