# app/Http/Resources/V1/ProductResource.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources\V1;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ProductResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'vendor_id' => $this->vendor_id,
+            'name' => $this->name,
+            'price' => $this->price,
+            'is_available' => $this->is_available,
+            'image_url' => $this->image_url,
+        ];
+    }
+}
